fixed oddly large logo on tablet display

--- a/src/nyc_trees/sass/partials/_header.scss
+++ b/src/nyc_trees/sass/partials/_header.scss
@@ -64,10 +64,9 @@
   @media (min-width: $screen-sm) {
     width: auto;
     padding-top: .5rem;
-  }
-  @media (min-width: $screen-md) {
     img {
       max-width: 225px;
+      vertical-align: middle;
     }
   }
 }
